# doxygen-kotlin-generator

./: .gitignore  AGENTS.md  Doxyfile  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
kotlin_doxygen/: __main__.py  cli.py  filter.py  parser.py  renderer.py
samples/: Doxyfile  Example.kt
scripts/: build-windows.ps1  build.sh
tests/: test_cli.py  test_real_world.py  test_type_inference.py
tests/fixtures/: ComposeScreen.kt  ViewModel.kt
